# splinebox

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: Makefile  basis.rst  basis_functions.rst  conf.py  index.rst  references.rst  requirements.txt  spline_curves.rst  splines.rst
docs/_static/css/: custom.css
docs/_templates/: attribute.rst  class.rst  custom-autosummary-attribute-template.rst  custom-autosummary-class-template.rst  custom-autosummary-function-template.rst  custom-autosummary-method-template.rst  custom-autosummary-module-template.rst  function.rst  method.rst  module.rst
docs/api/: b1.rst  b2.rst  b3.rst  basis_functions.rst  catmullrom.rst  cubichermite.rst  exponential.rst  exponentialhermite.rst  hermite_spline_curves.rst  index.rst  spline_curves.rst
docs/definitions/: index.rst
docs/getting_started/: citation.rst  index.rst  padding.rst
docs/pyplots/: plot_b1.py  plot_b2.py  plot_b3.py  plot_catmullrom.py  plot_cubichermite.py  plot_em.py  plot_exponential.py  plot_exponentialhermite.py  plot_h3.py  plot_he3.py  plot_keys.py  plot_no_padding.py  plot_padding.py  plot_performance.py
docs/theory/: active_contours.rst  basis.rst  basis_function.rst  catmullrom.rst  cubichermite.rst  data_approximation.rst  exponential.rst  exponentialhermite.rst  index.rst  polynomial.rst
examples/: README.rst  celegans.tif  dendrite.tif  example1.py  peptides.tif  performance_tests.py  playground1.py  plot_3D_curvature.py  plot_active_contours.py  plot_background.py  plot_boundary_conditions.py  plot_celegans.py  plot_curvature_combs.py  plot_dendrite.py  plot_distance.py  plot_example1.py  plot_frame.py  plot_io.py  plot_logo.py  plot_mesh.py  plot_multivariate.py  plot_peptides.py  plot_performance_comparison_with_scipy.py  plot_sin.py  plot_splinebox_vs_scipy_coin.py  plot_splinebox_vs_scipy_line.py  skip_peptides.py  skip_performance_paper.py
src/: conftest.py
src/splinebox/: __init__.py  basis.py  basis_functions.py  curves.py  multivariate.py  spline_curves.py  splines.py
tests/: conftest.py  test_basis.py  test_basis_functions.py  test_multivariate.py  test_spline_curves.py
