[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
write_to = "src/splinebox/_version.py"

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']


[tool.ruff]
line-length = 120
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long. let black handle this
    "A003", # shadowing of a Python builtin
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
]

target-version = "py38"
fix = true

[project]
name = "splinebox"
dynamic = ["version"]
dependencies = [
    "numpy",
    "scipy",
    "numba",
]
requires-python = ">= 3.8"
authors = [
    {name = "Florian Aymanns", email = "florian.aymanns@epfl.ch"},
    {name = "Virginie Uhlmann", email = "uhlmann@ebi.ac.uk"},
    {name = "Edward Andò", email = "edward.ando@epfl.ch"},
]
maintainers = [
    {name = "Florian Aymanns", email = "flroian.aymanns@epfl.ch"},
]
description = "A python package for fitting splines."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["splines", ]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
test = [
    "tox",
    "pytest",
    "pytest-cov",
]
examples = [
    "matplotlib",
    "scikit-image",
    "pandas",
    "seaborn",
]
docs = [
    "splinebox[examples]",
    "sphinx-gallery",
    "pydata-sphinx-theme",
    "sphinx-design",
]
all = [
    "splinebox[test,examples,docs]",
]

[project.urls]
Repository = "https://github.com/EPFL-Center-for-Imaging/splinebox"
