[metadata]
name = splinebox
version = attr: splinebox.__version__
description = A python package for fitting splines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/EPFL-Center-for-Imaging/splinebox

author = Florian Aymanns, Virginie Uhlmann
author_email = florian.aymanns@epfl.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
package_dir =
    =src
setup_requires = setuptools_scm

[optinons.packages.find]
where = src

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/

[options.package_data]
* = *.yaml
